--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
 					 alt="logo"
 					 class="logo">Love Maths</h1>
 		<!-- Game area -->
-		<div class="game-area"></div>
+		<div class="game-area">
+			<div class="controls-area">
+				<button class="btn btn--big btn--green"><i class="fas fa-plus"></i></button>
+				<button class="btn btn--big btn--blue"><i class="fas fa-minus"></i></button>
+				<button class="btn btn--big btn--orange"><i class="fas fa-times"></i></button>
+				<button class="btn btn--big btn--red"><i class="fas fa-divide"></i></button>
+			</div>
+			<div class="question-area">
+				<span id="operand1">0</span>
+				<span id="operator">X</span>
+				<span id="operand2">0</span>
+				<span>=</span>
+				<p class="answer-message">Enter Answer: </p>
+				<input type="number"
+							 id="answer-box">
+				<button class="btn btn--gray">Submit Answer</button>
+			</div>
+		</div>
 		<!-- score area -->
 		<div class="score-area">
 			<p class="scores">Correct Answers <span id="score">0</span></p>
