--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
 		<!-- Game area -->
 		<div class="game-area">
 			<div class="controls-area">
-				<button class="btn btn--big btn--green"><i class="fas fa-plus"></i></button>
-				<button class="btn btn--big btn--blue"><i class="fas fa-minus"></i></button>
-				<button class="btn btn--big btn--orange"><i class="fas fa-times"></i></button>
-				<button class="btn btn--big btn--red"><i class="fas fa-divide"></i></button>
+				<button data-type="addition"
+								class="btn btn--big btn--green"><i class="fas fa-plus"></i></button>
+				<button data-type="subtraction"
+								class="btn btn--big btn--blue"><i class="fas fa-minus"></i></button>
+				<button data-type="multiplication"
+								class="btn btn--big btn--orange"><i class="fas fa-times"></i></button>
+				<button data-type="division"
+								class="btn btn--big btn--red"><i class="fas fa-divide"></i></button>
 			</div>
 			<div class="question-area">
 				<span id="operand1">0</span>
@@ -35,7 +39,8 @@
 				<p class="answer-message">Enter Answer: </p>
 				<input type="number"
 							 id="answer-box">
-				<button class="btn btn--gray">Submit Answer</button>
+				<button data-type="submit"
+								class="btn btn--gray">Submit Answer</button>
 			</div>
 		</div>
 		<!-- score area -->
