--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								class="btn btn--big btn--green"><i class="fas fa-plus"></i></button>
 				<button data-type="subtraction"
 								class="btn btn--big btn--blue"><i class="fas fa-minus"></i></button>
-				<button data-type="multiplication"
+				<button data-type="multiply"
 								class="btn btn--big btn--orange"><i class="fas fa-times"></i></button>
 				<button data-type="division"
 								class="btn btn--big btn--red"><i class="fas fa-divide"></i></button>
