Add division quesion code. Added both multiplication and modulus methods for creating non divisible by 0 and integer results.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 								class="btn btn--big btn--blue"><i class="fas fa-minus"></i></button>
 				<button data-type="multiply"
 								class="btn btn--big btn--orange"><i class="fas fa-times"></i></button>
-				<button data-type="division"
+				<button data-type="divide"
 								class="btn btn--big btn--red"><i class="fas fa-divide"></i></button>
 			</div>
 			<div class="question-area">
